fix site jumping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  /* fix site jumping, when data is loaded */
+  overflow-y: scroll;
+}
